[package]
name = "open-coroutine-core"
version = "0.5.0"
edition = "2021"
authors = ["zhangzicheng@apache.org"]
description = "The open-coroutine is a simple, efficient and generic coroutine library."
repository = "https://github.com/acl-dev/open-coroutine"
keywords = ["runtime", "coroutine", "hook", "preempt", "work-steal"]
categories = ["concurrency", "asynchronous", "os", "network-programming", "wasm"]
license = "Apache-2.0"
readme = "/README.md"

[dependencies]
cfg-if = "1.0.0"
once_cell = "1.19"
derivative = { version = "2.2", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.6", optional = true }

[build-dependencies]
cfg-if = "1.0.0"

[target.'cfg(target_os = "linux")'.build-dependencies]
cc = "1.1"

[dev-dependencies]
anyhow = "1.0"
slab = "0.4"

[features]

# Provide io_uring adaptation, this feature only works in linux.
io_uring = ["io-uring"]