[package]
name = "open-coroutine"
version = "0.5.0"
edition = "2021"
authors = ["zhangzicheng@apache.org"]
description = "The open-coroutine is a simple, efficient and generic stackful-coroutine library."
repository = "https://github.com/acl-dev/open-coroutine"
keywords = ["coroutine", "fiber", "stackful", "hook"]
categories = ["data-structures", "concurrency", "asynchronous", "web-programming", "wasm"]
license = "Apache-2.0"
readme = "/README.md"

[dependencies]
libc = "0.2"
open-coroutine-core = { version = "0.5.0", path = "../core" }
open-coroutine-hook = { version = "0.5.0", path = "../hook" }
open-coroutine-macros = { version = "0.5.0", path = "../macros" }

[features]
default = ["open-coroutine-hook/default", "open-coroutine-core/default"]

# Print some help log.
# Enable for default.
log = ["open-coroutine-hook/log", "open-coroutine-core/log"]

# Provide preemptive scheduling implementation.
# Enable for default.
preemptive = ["open-coroutine-hook/preemptive", "open-coroutine-core/preemptive"]

# Provide net API abstraction and implementation.
net = ["open-coroutine-hook/net", "open-coroutine-core/net"]

# Provide io_uring abstraction and implementation.
# This feature only works in linux.
io_uring = ["open-coroutine-hook/io_uring", "open-coroutine-core/io_uring"]

# Provide syscall implementation.
syscall = ["open-coroutine-hook/syscall", "open-coroutine-core/syscall"]
